Corrected sidebar collapse name

--- a/css/light.css
+++ b/css/light.css
@@ -33,7 +33,7 @@ input.Number {
 	right: 300px;
 	bottom: 50%;
 	/*bottom: 0px;*/
-	outline: 1px dashed red;
+	/*outline: 1px dashed red;*/
 }
 
 	#viewport #info {
